Doing overflow:inherit to stop tabbed results content from showing scrollbar in certain situations; Using pull-right on results per page dropdown so that it drops down to the left instead of the right

--- a/app/assets/stylesheets/hrwa.css
+++ b/app/assets/stylesheets/hrwa.css
@@ -332,6 +332,7 @@ iframe#x_container { width:100%; }
 #topfqs { display:none; }
 #primary #fqs a.btn { margin-bottom:4px; padding:2px 4px; }
 #primary h1 {margin-bottom:20px;}
+#primary #results-tab-content { overflow:inherit; }
 #site_footer { margin-top:2em; border-top:1px solid #eee; padding-top:10px;}
 #site_footer #culcul { padding-left:28px; background:#fff url('crown-small-blue.png') no-repeat 0 2px; line-height:28px; font-size:11px; }
 #search_results article .documentHeader h5 {overflow:hidden;}
